# vibe-git

./: .gitignore  .mcp-simple.json  .mcp.json  .mutmut.cfg  .mutmut_config  .mutmut_config_main  .pre-commit-config.yaml  BEARTYPE_EVERYWHERE.md  BEARTYPE_PLUM_FINAL_SUMMARY.md  CLAUDE.md  Cargo.toml  FINAL_TYPE_SAFETY_SUMMARY.md  IMPROVEMENTS.md  Makefile  README.md  TYPE_SAFETY_IMPROVEMENTS.md  direct_fix_test.txt  final_fix_test.txt  final_test.txt  main.py  mutants.toml  pr_fix_final_test.txt  pr_fix_test.txt  pyproject.toml  run_ci_tests.sh  start_vibe.sh  test-verify.txt  test.sqlite  test_auto_commit_comprehensive.py  test_auto_commit_simple.py  test_case4_refined.py  test_core.py.bak  test_fix_verification.py  test_integration_fix.py  test_mcp.sh  test_mcp_tools.sh  test_mutation_manually.py  test_pr_creation_bug.py  test_pr_works.txt  test_real_fix.txt  (+8 more)
.github/workflows/: ci.yml  publish.yml  test.yml
mutants/: mutmut-stats.json  pyproject.toml  vibe_status_only.py
src/: git.rs  lib.rs  main.rs  mcp.rs  service.rs  typestate.rs  watcher.rs
src/vibe_git/: __init__.py  event_types.py  git_utils.py  main.py  result_types.py  state_persistence.py  state_types.py  state_utils.py  type_utils.py  vibe_status_only.py
tests/: mcp_client_integration.rs  mcp_integration.rs  test_auto_commit_simple.py  test_enhanced_type_safety.py  test_file_handler.py  test_main_function.py  test_regression_suite.py  test_simple_mock.py  test_state_persistence.py  test_status_only.py  test_type_safety.py  test_utils.py  typestate_integration.rs
